--- a/client/public/index.html
+++ b/client/public/index.html
@@ -24,6 +24,11 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <!-- Goolge fonts -->
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;family=Rajdhani:wght@400;600;700&amp;display=swap" rel="stylesheet">
+
     <title>React App</title>
   </head>
   <body>
