--- a/client/public/index.html
+++ b/client/public/index.html
@@ -29,7 +29,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin="">
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;600&amp;family=Rajdhani:wght@400;600;700&amp;display=swap" rel="stylesheet">
 
-    <title>React App</title>
+    <title>ric-chatbot</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
